Fix routing in GH Pages

--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "gh-pages": "^3.2.3",
     "gulp": "^4.0.2",
     "gulp-append-prepend": "^1.0.9",
-    "prettier": "^2.3.0"
+    "prettier": "^2.3.0",
+    "node-gyp"              : "^8.4.1"
   },
   "optionalDependencies": {
     "typescript": "^4.2.4"
